docs/requirements/v1.3.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As an API user, I want to know the unique values for a specific API field. ([#284](https://github.com/NASA-PDS/registry-api/issues/284)) 


This requirement is not impacted by the current version
## As an API user, I want an average query response time of 1 second for q=* queries ([#69](https://github.com/NASA-PDS/registry-api/issues/69)) 


This requirement is not impacted by the current version
## As an API user, I want to handle long-running queries that take >10 seconds. ([#68](https://github.com/NASA-PDS/registry-api/issues/68)) 


This requirement is not impacted by the current version
## As an operator, I want to have a wrapper script for starting up the API service ([#67](https://github.com/NASA-PDS/registry-api/issues/67)) 


This requirement is not impacted by the current version
## As a user, I want to know why my query syntax is invalid ([#66](https://github.com/NASA-PDS/registry-api/issues/66)) 


This requirement is not impacted by the current version
## As a user,  I want specific end points for products which are not collections or bundles ([#65](https://github.com/NASA-PDS/registry-api/issues/65)) 


This requirement is not impacted by the current version
## As a user, I want the /products end point to work for any class of products ([#64](https://github.com/NASA-PDS/registry-api/issues/64)) 


This requirement is not impacted by the current version
## As a user, I want the end-point /api to redirect to the API documentation ([#63](https://github.com/NASA-PDS/registry-api/issues/63)) 


This requirement is not impacted by the current version
## As a user, I want to have a complete default fields (for now at least) ([#155](https://github.com/NASA-PDS/registry-api/issues/155)) 


This requirement is not impacted by the current version
## As a client developer, I want to facet on 1 or more fields in the registry ([#283](https://github.com/NASA-PDS/registry-api/issues/283)) 


This requirement is not impacted by the current version
## As a user, I want to have singular urls when I should only expect a single element in the response ([#61](https://github.com/NASA-PDS/registry-api/issues/61)) 


This requirement is not impacted by the current version
## As a user, I want to see the version of the API specification in the URL of the service ([#59](https://github.com/NASA-PDS/registry-api/issues/59)) 


This requirement is not impacted by the current version
## As a user, I want to see the version of the API specification in the URL of the service ([#8](https://github.com/NASA-PDS/registry-api/issues/8)) 


This requirement is not impacted by the current version
## As a user, I want the /products end point to work for any class of products ([#11](https://github.com/NASA-PDS/registry-api/issues/11)) 


This requirement is not impacted by the current version
## As a user,  I want to query for products from any PDS4 product type ([#12](https://github.com/NASA-PDS/registry-api/issues/12)) 


This requirement is not impacted by the current version
## As a user, I want to know why my query syntax is invalid ([#13](https://github.com/NASA-PDS/registry-api/issues/13)) 


This requirement is not impacted by the current version
## As an operator, I want to have a wrapper script for starting up the API service ([#14](https://github.com/NASA-PDS/registry-api/issues/14)) 


This requirement is not impacted by the current version
## As an API user, I want to handle long-running queries that take >10 seconds. ([#15](https://github.com/NASA-PDS/registry-api/issues/15)) 


This requirement is not impacted by the current version
## As an API user, I want an average query response time of 1 second for q=* queries ([#16](https://github.com/NASA-PDS/registry-api/issues/16)) 


This requirement is not impacted by the current version
## As an API caller(user) I want to specify fields for endpoints given a lidvid ([#80](https://github.com/NASA-PDS/registry-api/issues/80)) 


This requirement is not impacted by the current version
## the default proposed mime type in swagger-ui.html should be 'application/json' ([#88](https://github.com/NASA-PDS/registry-api/issues/88)) 


This requirement is not impacted by the current version
## As a user, I want to have an administrator contact when I am getting an error 500 from the server ([#109](https://github.com/NASA-PDS/registry-api/issues/109)) 


This requirement is not impacted by the current version
## As a user I want consistent /type/lidvlid/{child,parent}/{latest,all} ([#126](https://github.com/NASA-PDS/registry-api/issues/126)) 


This requirement is not impacted by the current version
## As a user, I want to get the product identifiers in a application/kvp+json format ([#132](https://github.com/NASA-PDS/registry-api/issues/132)) 


This requirement is not impacted by the current version
## As a user, I want to be able to paginate over any number of results returned from a query. ([#176](https://github.com/NASA-PDS/registry-api/issues/176)) 


This requirement is not impacted by the current version
## As a user, I want to flush the API cache after archive status has been changed ([#228](https://github.com/NASA-PDS/registry-api/issues/228)) 


This requirement is not impacted by the current version
## As a web client developer, I want to be able to access the API without having to ask for authorization ([#192](https://github.com/NASA-PDS/registry-api/issues/192)) 


This requirement is not impacted by the current version
## As a registry-tool/registry-user I want to ensure leading multiple forward-slashes in request paths are stripped out ([#208](https://github.com/NASA-PDS/registry-api/issues/208)) 


This requirement is not impacted by the current version
## As a user, I want the API to support redundant `/` in the url ([#212](https://github.com/NASA-PDS/registry-api/issues/212)) 


This requirement is not impacted by the current version
## As a user, I want to know the members of a bundle product ([#223](https://github.com/NASA-PDS/registry-api/issues/223)) 


This requirement is not impacted by the current version
## As a user, I want to know the unit or nilReason for an attribute. ([#307](https://github.com/NASA-PDS/registry-api/issues/307)) 


This requirement is not impacted by the current version
## As a user, I want to search by any metadata attribute ([#282](https://github.com/NASA-PDS/registry-api/issues/282)) 


This requirement is not impacted by the current version
## Suggest: Return Content-Type application/json by default ([#248](https://github.com/NASA-PDS/registry-api/issues/248)) 


This requirement is not impacted by the current version
## As a user, I want to see available query params in the swagger documentation ([#249](https://github.com/NASA-PDS/registry-api/issues/249)) 


This requirement is not impacted by the current version
## As a user, I want to be informed if some of the members of bundle or collection where not retrieve or are not visible yet for me ([#270](https://github.com/NASA-PDS/registry-api/issues/270)) 


This requirement is not impacted by the current version
## As a user, I want to query-filter products by collection- and/or bundle- membership ([#298](https://github.com/NASA-PDS/registry-api/issues/298)) 


This requirement is not impacted by the current version
## Remove provenance --reset option ([#310](https://github.com/NASA-PDS/registry-api/issues/310)) 


This requirement is not impacted by the current version
## As a user, I want the /properties endpoint to display counts for products having each property ([#323](https://github.com/NASA-PDS/registry-api/issues/323)) 


This requirement is not impacted by the current version
## As a user, I want the /properties endpoint to display range/enum type and values for each property ([#324](https://github.com/NASA-PDS/registry-api/issues/324)) 


This requirement is not impacted by the current version
## As a user, I want the /properties endpoint to include a link to explanatory documentation (i.e. DD or similar) ([#325](https://github.com/NASA-PDS/registry-api/issues/325)) 


This requirement is not impacted by the current version
## As a PDS operator, I want to know the health of the registry API service ([#336](https://github.com/NASA-PDS/registry-api/issues/336)) 


This requirement is not impacted by the current version
## Remove support (provenance) module migrated to registry-sweeper repository ([#340](https://github.com/NASA-PDS/registry-api/issues/340)) 


This requirement is not impacted by the current version
## As a user, I want the PDS4 properties to be case agnositics ([#354](https://github.com/NASA-PDS/registry-api/issues/354)) 


This requirement is not impacted by the current version
## As a user, I want my API request to execute successfully even when the registry contains corrupted documents ([#361](https://github.com/NASA-PDS/registry-api/issues/361)) 


This requirement is not impacted by the current version
## As a user, I want to get an error 400 and relevant suggestions when the properties I am using in the q and fields do not exist in the registry ([#363](https://github.com/NASA-PDS/registry-api/issues/363)) 


This requirement is not impacted by the current version
## As a user, I want to use an URL parameters to chose the response format ([#371](https://github.com/NASA-PDS/registry-api/issues/371)) 


This requirement is not impacted by the current version
## As a user, I want to pretty print the response from command line (e.g. curl) without need for additional tool (e.g. json_pp) ([#372](https://github.com/NASA-PDS/registry-api/issues/372)) 


This requirement is not impacted by the current version
## As a user, I want to get a simple html response format from the API ([#374](https://github.com/NASA-PDS/registry-api/issues/374)) 


This requirement is not impacted by the current version
## As a user, I want to sort by ascending/descending order of a specific field ([#385](https://github.com/NASA-PDS/registry-api/issues/385)) 


This requirement is not impacted by the current version
## As a developer, I want to have a C client for the PDS-API ([#393](https://github.com/NASA-PDS/registry-api/issues/393)) 


This requirement is not impacted by the current version
## As a user, I don't want to see the default fields in properties structure when I use the fields= parameter ([#394](https://github.com/NASA-PDS/registry-api/issues/394)) 


This requirement is not impacted by the current version
## As a user, I want to query for documents where a specific search field exists in the document ([#406](https://github.com/NASA-PDS/registry-api/issues/406)) 


This requirement is not impacted by the current version